# buywise-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
agent/: graph.py  state.py
agent/agents/: action_agent.py  order_agent.py  policy_agent.py  product_agent.py  supervisor.py  verifier_agent.py
apps/api/: Dockerfile  main.py
assets/: architecture.html  demo.cast
eval/: run_all.py
ingestion/: __init__.py
ingestion/parsers/: csv_parser.py  email_parser.py  html_parser.py  pdf_parser.py
retrieval/: __init__.py
sample_data/headphone_warranty_case/: receipt.txt  support_email.eml  warranty_card.txt
sample_data/laptop_return_case/: bank_statement.csv  receipt.txt  return_policy.html
scripts/: demo.py  seed_sample_data.py
