[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "buywise-agent"
version = "0.1.0"
description = "A LangGraph-powered multi-agent RAG assistant for warranty/return decisions — MVP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core workflow
    "langgraph>=0.1.0",
    "langchain-openai>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # API
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "python-multipart>=0.0.6",

    # File parsing
    "pdfplumber>=0.9.0",
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.10.0",
    "lxml>=4.9.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
pgvector = [
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "rank-bm25>=0.2.0",
    "langchain-community>=0.2.0",
]
evalextra = [
    "ragas>=0.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["agent*", "ingestion*", "retrieval*", "eval*", "workers*", "apps*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
